workspace = { members = ["modify-derive"] }
[package]
name = "rs-m0p-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modify-derive = { version = "0.1.0", path = "modify-derive" }
rs-arm-core = { path = "../rs-arm-core" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
